--- a/public/css/my-style.css
+++ b/public/css/my-style.css
@@ -5,6 +5,23 @@
     width: 25px;
     height: 25px;
 }
+.notification-icon{
+    border-radius: 50%;
+	background-color: #33CCFF;
+	font-size: 10px;
+    text-align: center;
+    color: white;
+    display: inline-block;
+    position: relative;
+    top: -7px;
+    height: 18px;
+    width: 20px;
+    margin-left: -8px;
+    padding: 0 4px 0 4px;
+}
+.display-none{
+    display: none;
+}
 
 #post-index .post-meta{
     float: right;
@@ -173,4 +190,22 @@
 }
 #user-edit .no-display{
     display: none;
+}
+
+#message-index .message-title{
+    background-color: #5599FF !important;
+    border-color: #5599FF !important;
+}
+#message-index .message-span{
+    float: right;
+}
+#message-index a:hover{
+    text-decoration: none;
+}
+#message-index .bold{
+    font-weight: bold;
+}
+
+#message-show button{
+    float: right;
 }
